syntax = "proto3";

package gapi.examples.helloworld.proto;

option go_package = "github.com/vizee/gapi/examples/helloworld/proto";

import "gapi/annotation.proto";

service Greeter {
    option (gapi.server) = "localhost:50051";
    option (gapi.default_handler) = "jsonapi";
    option (gapi.default_timeout) = 5000;
    option (gapi.path_prefix) = "/greeter";
    option (gapi.use) = "sign";

    rpc SayHello (HelloRequest) returns (HelloReply) {
        option (gapi.http) = {
            post: "/sayHello"
            use: "auth"
        };
    }
}

message HelloRequest {
    string name = 1;
    string userId = 2 [(gapi.alias) = "uid", (gapi.bind) = FROM_CONTEXT];
}

message HelloReply {
    string message = 1;
}
